# recapitulareSDA

./: CMakeLists.txt  main.cpp
cap1/: ex4.cpp  ex4.h  ex6.cpp  ex6.h  ex7.cpp  ex7.h  test_mem.cpp  test_mem.h  union_find.cpp  union_find.h  union_find_max.cpp  union_find_max.h
cap2/: circularList.cpp  circularList.h  doubleLinkedList.cpp  doubleLinkedList.h  ex_c1.cpp  ex_c1.h  ex_c2.cpp  ex_c2.h  ex_c3.cpp  ex_c3.h  linkedListInsert.cpp  linkedListInsert.h  list.cpp  list.h  simpleLinkedList.cpp  simpleLinkedList.h
cap3/: binarySearch.cpp  binarySearch.h  insertionSort.cpp  insertionSort.h  linearSearch.cpp  linearSearch.h  mergeSort.cpp  mergeSort.h  selectionSort.cpp  selectionSort.h  sqrtBinarySearch.cpp  sqrtBinarySearch.h
cap4/: postfixEvaluation.cpp  postfixEvaluation.h  postfixToInfix.cpp  postfixToInfix.h
cap5/: recursiveArrayRev.cpp  recursiveArrayRev.h  recursiveCMMDC.cpp  recursiveCMMDC.h  recursivePalindrome.cpp  recursivePalindrome.h  tracedFactorial.cpp  tracedFactorial.h  tracedSum.cpp  tracedSum.h
